# teacher-s_assistant

./: README.md  db.sqlite3  pyproject.toml
settings/: settings.py
users/migrations/: 0001_initial.py
wards/: models.py
wards/migrations/: 0001_initial.py
